[package]
name = "buildfix-receipts-cargo-warn"
version = "0.2.0"
publish = ["crates-io"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Adapter that parses cargo-warn JSON output and converts it to buildfix receipts."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cargo", "adapter", "cargo-warn", "receipt"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
buildfix-types = { version = "0.2.0", path = "../buildfix-types" }
buildfix-adapter-sdk = { version = "0.2.0", path = "../buildfix-adapter-sdk" }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
